strykermutatoroutput.txt
[32m00:12:04 (17036) INFO ProjectReader[39m Found 579 of 11266 file(s) to be mutated.
[91m00:12:05 (17036) ERROR Stryker[39m Unexpected error occurred while running Stryker SyntaxError: /workspaces/nodebb-fall-2025-night-owls/src/cli/index.js: 'return' outside of function. (113:1)

  111 | if (!configExists && process.argv[2] !== 'setup') {
  112 | 	require('./setup').webInstall();
> 113 | 	return;
      | 	^
  114 | }
  115 |
  116 | if (configExists) {
    at constructor (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:367:19)
    at V8IntrinsicMixin.raise (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:6624:19)
    at V8IntrinsicMixin.parseReturnStatement (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:13212:12)
    at V8IntrinsicMixin.parseStatementContent (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12874:21)
    at V8IntrinsicMixin.parseStatementLike (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12843:17)
    at V8IntrinsicMixin.parseStatementListItem (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12823:17)
    at V8IntrinsicMixin.parseBlockOrModuleBlockBody (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:13392:61)
    at V8IntrinsicMixin.parseBlockBody (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:13385:10)
    at V8IntrinsicMixin.parseBlock (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:13373:10)
    at V8IntrinsicMixin.parseStatementContent (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12934:21)
    at V8IntrinsicMixin.parseStatementLike (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12843:17)
    at V8IntrinsicMixin.parseStatementOrSloppyAnnexBFunctionDeclaration (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12833:17)
    at V8IntrinsicMixin.parseIfStatement (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:13206:28)
    at V8IntrinsicMixin.parseStatementContent (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12872:21)
    at V8IntrinsicMixin.parseStatementLike (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12843:17)
    at V8IntrinsicMixin.parseModuleItem (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12820:17)
    at V8IntrinsicMixin.parseBlockOrModuleBlockBody (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:13392:36)
    at V8IntrinsicMixin.parseBlockBody (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:13385:10)
    at V8IntrinsicMixin.parseProgram (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12698:10)
    at V8IntrinsicMixin.parseTopLevel (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:12688:25)
    at V8IntrinsicMixin.parse (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:14568:25)
    at parse (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/parser/lib/index.js:14602:38)
    at parser (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at parse (/workspaces/nodebb-fall-2025-night-owls/node_modules/@babel/core/lib/parse.js:25:37)
    at parse.next (<anonymous>)
    at step (/workspaces/nodebb-fall-2025-night-owls/node_modules/gensync/index.js:261:32)
    at /workspaces/nodebb-fall-2025-night-owls/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/workspaces/nodebb-fall-2025-night-owls/node_modules/gensync/index.js:223:11) {
  code: 'BABEL_PARSE_ERROR',
  reasonCode: 'IllegalReturn',
  loc: Position { line: 113, column: 1, index: 3751 },
  pos: 3751,
  syntaxPlugin: undefined
}
[32m00:12:05 (17036) INFO Stryker[39m This might be a known problem with a solution documented in our troubleshooting guide.
[32m00:12:05 (17036) INFO Stryker[39m You can find it at https://stryker-mutator.io/docs/stryker-js/troubleshooting/
[32m00:12:05 (17036) INFO Stryker[39m Still having trouble figuring out what went wrong? Try `npx stryker run --fileLogLevel trace --logLevel debug` to get some more info.
